Update project descriptions

--- a/index.html
+++ b/index.html
@@ -183,24 +183,51 @@
             </div>
             <div id="projects">
                 <h1>Projects</h1>
-                <h2>Energy in Zimbabwe</h2>
-                <p>The team plans to carry out an alternatives analysis during the fall 2015 semester to identify the most cost-effective and sustainable alternative energy source to power the street lights (current options are solar, hydropower, biogas, and grid-charged batteries). Then, design work will be done in the spring 2016 semester, with the goal of traveling for implementation in August or December 2016.</p>
-                <p> Nyadire is a Methodist Mission complex located three hours northeast of Harare, Zimbabwe’s capital. The community is home to about 3000 people and a hospital, orphanage, and a teacher’s college. Electricity is provided by the Zimbabwe Electrical Supply Author. </p>
-                <h2>Coffee Project</h2>
-                <p> The Coffee Project is a research initiative that began last year. After completing an initial analysis of the market and agricultural process, the team made a trip last August to Ecuador to interview coffee growers and gather information. This past semester, the team organized the data and have identified several possible areas to make the growing process more efficient and profitable. One idea the team has investigated- the brewing of “coffee alcohol” using byproducts of the coffee-making process and ingredients locally available to the farmers. The project team plans to continue to research this and several other ideas in the coming months. </p>
-                <h2>PET Thatch</h2>
-                <p> PET Thatch is an ambitious joint effort between our chapter and the Reuse Everything Institute, a local non-profit. The project’s mission is to develop an automated process to construct thatch roofs and other products from recycled plastic bottles. The process will then be transplanted into communities in developing nations, where local entrepreneurs will take over the venture. </p>
-                <p> After a two-week trip to Ecuador where the team constructed a new thatch roof for a national park and collected data on recycling habits, the team has reorganized into four groups: cutting, fusing, decontouring, and roof design. </p>
-                <h3>Cutting</h3>
-                <p> The cutting section of the PET Thatch project aims to create a method to cut off the tops and bottoms of the bottles and then cutting the bottles into strips. The focus is to make this process automated and efficient, while keeping it safe. In the past semester, they have created a prototyping model for a cutting chute, sketched out a plan for strip cutting rollers, and are in the process of testing cutting blades. </p>
-                <h3>Fusing</h3>
-                <p> As part of the PET Thatch project, the fusing section is responsible for connecting the individual plastic strips from the cutting section into longer plastic thatch for the roof design section. The main concerns of the section are to make the fusing process easy to learn, affordable, and effective. Currently, the team is researching alternative methods of fusing and have determined three effective mechanical alternatives to ultrasonic fusing. </p>
-                <h3>Decontouring</h3>
-                <p> Decontouring is the process by which ridges and deformations are removed from surfaces. The decontouring team of the PET Thatch project is currently developing a device to accomplish this task. The team has finalized a design utilizing a heated roller system and plan on constructing this system in the upcoming weeks. </p>
-                <h3>Roof Design</h3>
-                <p> This groups looks at the holistic system by creating ideas in manufacturing and application while identifying what end product will perform best through prototypes and experimentation. In the past few months, the team has created a test frame to build model roofs and prototyped new methods of assembling plastic roof tiles. </p>
-                <h2>Tingo Pucará Development</h2>
-                <p> Since 2008, EWB-CMU, along with EWB members from the University of Pittsburgh and the Pittsburgh Professional chapters, have partnered with the community of Tingo Pucará. This indigenous community in the Ecuadorian Andes highlands wants to boost their quality of life through better access to potable water and sanitation. In 2012, a potable water pumping system was constructed, with tapstands installed at each home. To further improve health and sanitation, the community asked for help constructing latrines (design is shown to left). EWB is finalizing a design and materials list for a single pit ventilated latrine. The latrines will be constructed primarily of concrete and designed to last a minimum of 10 years. Eventually, a latrine will be constructed at each home. The team plans to travel to Ecuador this May. Concurrently, a new tri-chapter effort, hosted by the Pittsburgh Professionals, for a similar water pumping project has begun for the nearby community of Curingue. </p>
+                    <h2>ENERGY IN ZIMBABWE</h2>
+                        <p>This project works to provide consistent energy to Nyadire, a Methodist Mission complex located three hours northeast of Harare, Zimbabwe’s capital. The community is home to about 3000 people and a hospital, orphanage, and a teacher’s college. Their electricity is provided by the Zimbabwe Electrical Supply Author, but is unreliable. Community members experience multiple unscheduled energy black outs each day and night, preventing the effective operation of the hospitals, schools, and homes.</p>
+
+                        <p>We are committed to working with Nyadire through 2020. Our first project is to build a street lighting system independent of the Government lighting through the center of campus. The lights will allow community members to use the campus at night which in currently unsafe.</p>
+
+                        <p>The team carried out alternatives analysis during fall 2015 semester to identify the most cost-effective and sustainable alternative energy source to power the street lights, considering decentralized and centralized solar, hydropower, biogas, and grid-charged batteries. Based on their research, the team is pursuing decentralized solar for their first project and are currently doing design work in the spring 2016 semester. We plan to travel to Zimbabwe for implementation in August or December 2016.</p>
+
+                    <h2>COFFEE PROJECT</h2>
+                        <p>The Coffee Project aims to help coffee farmers in Ecuador make their growing and processing process more efficient, profitable, and environmentally friendly. After completing an initial analysis of the market and agricultural process, the team made a trip to Ecuador in August of 2014 to interview coffee growers and gather information. This past semester, the team organized the data and have identified several possible areas for research. The team has investigated the brewing of “coffee alcohol” using byproducts of the coffee-making process and ingredients locally available to the farmers. They are also investigating waste product energy conversion.</p>
+
+                    <h2>PET THATCH</h2>
+                        <p>The project’s mission is to develop an automated process to construct thatch roofs and other products from recycled plastic bottles. The process will then be transplanted into communities in developing nations, where local entrepreneurs will take over the venture. PET Thatch is an ambitious joint effort between our chapter and the Reuse Everything Institute, a local non-profit.</p>
+
+                        <p>After a two-week trip to Ecuador in 2014 where the team constructed a new thatch roof for a national park and collected data on local recycling habits, the team spent 2014-2015 researching targeted aspects of the automation process: cutting, fusing, decontouring, and roof design. Current active research groups working to integrate the processes and exploring optimal applications of the technology.</p>
+
+                        <h3>Variable to Constant Width Ribbon</h3>
+                            <p>This project aims to take a continuous ribbon of plastic that is of a roughly consistent, but variable width and design a system that will produce a ribbon of uniform width for a variety of uses.</p>
+
+                        <h3>Woven Mat</h3>
+                            <p>This project aims to take a continuous ribbon of plastic that is of uniform width and design a system to weave this ribbon into a woven mat for a sheet-like product.<p>
+
+                        <h3>Fencing</h3>
+                            <p>This projects aims to take a continuous ribbon of plastic that is of uniform width and design a system to create fencing for a variety of applications such as landscaping and construction.</p>
+
+                        <h3>Washing and Drying Inorganic Waste</h3>
+                            <p>This project aims to take the waste produced by all of the repurposing processes and design a system that washes and dries it, prepping it for use as packing material for eco-bricks.</p>
+
+                        <h3>PAST RESEARCH GROUPS</h3>
+                            <h3>Cutting</h3>
+                                <p>The cutting section of the PET Thatch project aims to create a method to cut off the tops and bottoms of the bottles and then cutting the bottles into strips. The focus is to make this process automated and efficient, while keeping it safe. In the past semester, they have created a prototyping model for a cutting chute, sketched out a plan for strip cutting rollers, and are in the process of testing cutting blades.</p>
+
+                            <h3>Fusing</h3>
+                                <p>As part of the PET Thatch project, the fusing section is responsible for connecting the individual plastic strips from the cutting section into longer plastic thatch for the roof design section. The main concerns of the section are to make the fusing process easy to learn, affordable, and effective. Currently, the team is researching alternative methods of fusing and have determined three effective mechanical alternatives to ultrasonic fusing.</p>
+
+                            <h3>Decontouring</h3>
+                                <p>Decontouring is the process by which ridges and deformations are removed from surfaces. The decontouring team of the PET Thatch project is currently developing a device to accomplish this task. The team has finalized a design utilizing a heated roller system and plan on constructing this system in the upcoming weeks.</p>
+
+                            <h3>Roof Design</h3>
+                                <p>This groups looks at the holistic system by creating ideas in manufacturing and application while identifying what end product will perform best through prototypes and experimentation. In the past few months, the team has created a test frame to build model roofs and prototyped new methods of assembling plastic roof tiles.</p>
+
+                    <h2>TINGO PUCARÁ DEVELOPMENT</h2>
+                        <p>Since 2008, EWB-CMU, along with EWB members from the University of Pittsburgh and the Pittsburgh Professional chapters, have partnered with the community of Tingo Pucará. This indigenous community in the Ecuadorian Andes highlands wants to boost their quality of life through better access to potable water and sanitation. In 2012, a potable water pumping system was constructed, with tapstands installed at each home. To further improve health and sanitation, the community asked for help constructing latrines (design is shown to left). EWB is finalizing a design and materials list for a single pit ventilated latrine. The latrines will be constructed primarily of concrete and designed to last a minimum of 10 years. Eventually, a latrine will be constructed at each home. The team plans to travel to Ecuador this May. Concurrently, a new tri-chapter effort, hosted by the Pittsburgh Professionals, for a similar water pumping project has begun for the nearby community of Curingue.</p>
+
+
+
             </div>
 
             <div id="donate">
