--- a/index.html
+++ b/index.html
@@ -88,80 +88,47 @@
                     <tr>
                         <td style="text-align:right"> President</td>
                         <td>Sara Johnson</td>
-                        <td>
-                            snj AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Executive Vice President</td>
                         <td>Julia Tucker</td>
-                        <td>
-                            jltucker AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Vice President of Finance</td>
                         <td>Roshan Sajjad</td>
-                        <td>
-                            rsajjad AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Vice President of Projects</td>
                         <td>Cindy Weng</td>
-                        <td>
-                            cweng1 AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Vice President of Public Relations</td>
                         <td>Tushita Gupta</td>
-                        <td>
-                            tushitag AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Fundraising Chair</td>
                         <td>Emily Carvalho</td>
-                        <td>
-                            emcarval AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Grants and Sponsorships Chair</td>
                         <td>Sidharth Verma</td>
-                        <td>
-                            sidhartv AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Secretary</td>
                         <td>Charlotte Deiss</td>
-                        <td>
-                            cdeiss AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Webmaster</td>
                         <td>Sidharth Verma</td>
-                        <td>
-                            sidhartv AT andrew
-                        </td>
                     </tr>
                     <tr>
                         <td style="text-align:right"> Faculty Advisors</td>
                         <td>Kelvin Gregory</td>
-                        <td>
-                            kelvin AT cmu
-                        </td>
                     </tr>
                     <tr>
                         <td>
                         </td>
                         <td>Mel Siegel</td>
-                        <td>
-                            mws AT cmu
-                        </td>
                     </tr>
                     <tr>
                         <td>
@@ -171,7 +138,7 @@
                         <td colspan="3">
                             <p style="text-align:center">
                                 <i>If you have any questions, comments or would like to <br />get in touch with EWB-CMU please feel free to email</i>
-                                <a href="mailto:president@cmuewb.org" >president@cmuewb.org</a>.</p>
+                                <a href="mailto:cmuewb@gmail.com" >cmuewb@gmail.com</a>.</p>
                         </td>
                     </tr>
                 </table>
