--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         </a>
         <ul class="nav">
             <li>
-                <a href="#about">About Us</a>
+                <a href="about.html">About Us</a>
             </li>
             <li>
-                <a href="#calendar">Calendar</a>
+                <a href="calendar.html">Calendar</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="projects.html">Projects</a>
             </li>
             <li>
-                <a href="#donate">Donate</a>
+                <a href="donate.html">Donate</a>
             </li>
             <li>
-                <a href="#newsletters">Newsletters</a>
+                <a href="newsletters.html">Newsletters</a>
             </li>
         </ul>
         <div id="content">
@@ -49,186 +49,6 @@
                 <hr>
                 <a href="https://twitter.com/EWB_CMU" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @EWB_CMU</a>
                 <script>!function(d,s,id){varjs,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script', 'twitter-wjs');</script>
-            </div>
-            <div id="about">
-                <h1>About Us</h1>
-                <h2>Our Mission</h2>
-                <p> EWB-USA supports community-driven development programs worldwide by collaboratingwith local partners to design and implement sustainable engineering projects, while creatingtransformative experiences and responsible leaders.<br /> &nbsp;&nbsp;&nbsp;The Carnegie Mellon Chapter of EWB-USA is dedicated to understanding the challenges that face humanity today and implementing socially conscious and environmentally sustainable technologies to improve quality of life for local, national, and international communities.<br />
-                    <br />
-                </p>
-                <h2>Our History</h2>
-                <p> The Carnegie Mellon Chapter of Engineers Without Borders-USA was established in 2008, and has been growing strong ever since. One of the fastest growing engineering clubs on campus, we started as just a handful of students interested in similar things but now boast a chapter size of 70 active members. And we don't plan on slowing down. </p>
-                <h2>Current Board Members</h2>
-                <table id="board">
-                    <tr>
-                        <th colspan="3">
-                            <strong>Current Board Members</strong>
-                        </th>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> President</td>
-                        <td>Sara Johnson</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Executive Vice President</td>
-                        <td>Julia Tucker</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Vice President of Finance</td>
-                        <td>Roshan Sajjad</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Vice President of Projects</td>
-                        <td>Cindy Weng</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Vice President of Public Relations</td>
-                        <td>Tushita Gupta</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Fundraising Chair</td>
-                        <td>Emily Carvalho</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Grants and Sponsorships Chair</td>
-                        <td>Sidharth Verma</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Secretary</td>
-                        <td>Charlotte Deiss</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Webmaster</td>
-                        <td>Sidharth Verma</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right"> Faculty Advisors</td>
-                        <td>Kelvin Gregory</td>
-                    </tr>
-                    <tr>
-                        <td>
-                        </td>
-                        <td>Mel Siegel</td>
-                    </tr>
-                    <tr>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3">
-                            <p style="text-align:center">
-                                <i>If you have any questions, comments or would like to <br />get in touch with EWB-CMU please feel free to email</i>
-                                <a href="mailto:cmuewb@gmail.com" >cmuewb@gmail.com</a>.</p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div id="calendar">
-                <h1>Calendar</h1>
-                <iframe src="http://www.google.com/calendar/embed?mode=MONTH&amp;title=Engineers%20Without%20Borders-CMU&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23d9ceb4&amp;src=cmuewb%40gmail.com&amp;color=%23cfddde&amp;ctz=America%2FNew_York" style=" border-width:0 " width="720" height="600" frameborder="0">
-                </iframe>
-            </div>
-            <div id="projects">
-                <h1>Projects</h1>
-                    <h2>ENERGY IN ZIMBABWE</h2>
-                        <p>This project works to provide consistent energy to Nyadire, a Methodist Mission complex located three hours northeast of Harare, Zimbabwe’s capital. The community is home to about 3000 people and a hospital, orphanage, and a teacher’s college. Their electricity is provided by the Zimbabwe Electrical Supply Author, but is unreliable. Community members experience multiple unscheduled energy black outs each day and night, preventing the effective operation of the hospitals, schools, and homes.</p>
-
-                        <p>We are committed to working with Nyadire through 2020. Our first project is to build a street lighting system independent of the Government lighting through the center of campus. The lights will allow community members to use the campus at night which in currently unsafe.</p>
-
-                        <p>The team carried out alternatives analysis during fall 2015 semester to identify the most cost-effective and sustainable alternative energy source to power the street lights, considering decentralized and centralized solar, hydropower, biogas, and grid-charged batteries. Based on their research, the team is pursuing decentralized solar for their first project and are currently doing design work in the spring 2016 semester. We plan to travel to Zimbabwe for implementation in August or December 2016.</p>
-
-                    <h2>COFFEE PROJECT</h2>
-                        <p>The Coffee Project aims to help coffee farmers in Ecuador make their growing and processing process more efficient, profitable, and environmentally friendly. After completing an initial analysis of the market and agricultural process, the team made a trip to Ecuador in August of 2014 to interview coffee growers and gather information. This past semester, the team organized the data and have identified several possible areas for research. The team has investigated the brewing of “coffee alcohol” using byproducts of the coffee-making process and ingredients locally available to the farmers. They are also investigating waste product energy conversion.</p>
-
-                    <h2>PET THATCH</h2>
-                        <p>The project’s mission is to develop an automated process to construct thatch roofs and other products from recycled plastic bottles. The process will then be transplanted into communities in developing nations, where local entrepreneurs will take over the venture. PET Thatch is an ambitious joint effort between our chapter and the Reuse Everything Institute, a local non-profit.</p>
-
-                        <p>After a two-week trip to Ecuador in 2014 where the team constructed a new thatch roof for a national park and collected data on local recycling habits, the team spent 2014-2015 researching targeted aspects of the automation process: cutting, fusing, decontouring, and roof design. Current active research groups working to integrate the processes and exploring optimal applications of the technology.</p>
-
-                        <h3>Variable to Constant Width Ribbon</h3>
-                            <p>This project aims to take a continuous ribbon of plastic that is of a roughly consistent, but variable width and design a system that will produce a ribbon of uniform width for a variety of uses.</p>
-
-                        <h3>Woven Mat</h3>
-                            <p>This project aims to take a continuous ribbon of plastic that is of uniform width and design a system to weave this ribbon into a woven mat for a sheet-like product.<p>
-
-                        <h3>Fencing</h3>
-                            <p>This projects aims to take a continuous ribbon of plastic that is of uniform width and design a system to create fencing for a variety of applications such as landscaping and construction.</p>
-
-                        <h3>Washing and Drying Inorganic Waste</h3>
-                            <p>This project aims to take the waste produced by all of the repurposing processes and design a system that washes and dries it, prepping it for use as packing material for eco-bricks.</p>
-
-                        <h3>PAST RESEARCH GROUPS</h3>
-                            <h3>Cutting</h3>
-                                <p>The cutting section of the PET Thatch project aims to create a method to cut off the tops and bottoms of the bottles and then cutting the bottles into strips. The focus is to make this process automated and efficient, while keeping it safe. In the past semester, they have created a prototyping model for a cutting chute, sketched out a plan for strip cutting rollers, and are in the process of testing cutting blades.</p>
-
-                            <h3>Fusing</h3>
-                                <p>As part of the PET Thatch project, the fusing section is responsible for connecting the individual plastic strips from the cutting section into longer plastic thatch for the roof design section. The main concerns of the section are to make the fusing process easy to learn, affordable, and effective. Currently, the team is researching alternative methods of fusing and have determined three effective mechanical alternatives to ultrasonic fusing.</p>
-
-                            <h3>Decontouring</h3>
-                                <p>Decontouring is the process by which ridges and deformations are removed from surfaces. The decontouring team of the PET Thatch project is currently developing a device to accomplish this task. The team has finalized a design utilizing a heated roller system and plan on constructing this system in the upcoming weeks.</p>
-
-                            <h3>Roof Design</h3>
-                                <p>This groups looks at the holistic system by creating ideas in manufacturing and application while identifying what end product will perform best through prototypes and experimentation. In the past few months, the team has created a test frame to build model roofs and prototyped new methods of assembling plastic roof tiles.</p>
-
-                    <h2>TINGO PUCARÁ DEVELOPMENT</h2>
-                        <p>Since 2008, EWB-CMU, along with EWB members from the University of Pittsburgh and the Pittsburgh Professional chapters, have partnered with the community of Tingo Pucará. This indigenous community in the Ecuadorian Andes highlands wants to boost their quality of life through better access to potable water and sanitation. In 2012, a potable water pumping system was constructed, with tapstands installed at each home. To further improve health and sanitation, the community asked for help constructing latrines (design is shown to left). EWB is finalizing a design and materials list for a single pit ventilated latrine. The latrines will be constructed primarily of concrete and designed to last a minimum of 10 years. Eventually, a latrine will be constructed at each home. The team plans to travel to Ecuador this May. Concurrently, a new tri-chapter effort, hosted by the Pittsburgh Professionals, for a similar water pumping project has begun for the nearby community of Curingue.</p>
-
-
-
-            </div>
-
-            <div id="donate">
-                <h1>Donate</h1>
-                <div style="float: left; width: 55%;">
-                    <p> Please consider making a donation to the Carnegie Mellon chapter of Engineers Without Borders. Though we receive modest funding for group activities and outreach, we are still in need of your help in funding both of our projects, the potable water supply project for the village of Tingo Pucara, Ecuador and the sustainable energy supply project in the City of Rampur, India. </p>
-                    <p> Currently, the women and children of the Tingo Pucara spend upwards of three hours a day traveling to a water source, collecting water, and carrying it back to the village. Our goal is to sustainably, reliably, and safely pump water up a 1000 foot high hill in order to provide 70 liters a day to each of Tingo Pucara's 150 residents. Though we are handling the design and implementation, we cannot fund the entire project.</p>
-                    <p> In Rampur, most schools provide education to children of the udnerprivileged section of society, but are under-funded. The government-provided electric power is intermittent and inadepquate to meet the basic demand for lights, fans, or computers. Dark classrooms and hot classrooms are day to day struggles that students and teachers must deal with. We are hoping to make the first trip to Rampur of spring break of this year, but need any help we can get to make that a reality. </p>
-                    <p>Here's how you can donate:</p>
-                    <hr>
-                    <p>
-                        <a href="https://ssl.charityweb.net/ewbusa/?Custom3=100181" target="_blank">Online through EWB-USA</a>. Use your credit card to make a secure donation! </p>
-                    <hr>
-                    <p>Send a check made out to <b>&lsquo;Engineers Without Borders, Carnegie Mellon&rsquo;</b> through the mail to: </p>
-                    <p> Engineers Without Borders<br> Box 56<br> University Center Suite 103<br> Carnegie Mellon University<br> 5000 Forbes Avenue<br> Pittsburgh, PA 15213 </p>
-                    <hr>
-                    <p> You can even donate for a friend! Give a donation in any amount in another's name and we will send that person a certificate in your name as a holiday gift or acknowledging a special occasion. </p>
-                    <p> Another option is to donate your frequent flyer miles to Engineers Without Borders. They will be used for our trip to India this coming year. *Must be a complete flight. </p>
-                    <p>Thank you Xerox for the $6,000 you donated to our project
-                        in Zimbabwe!</p>
-                </div>
-                <p style="float: right; padding-left: 15px;">
-                    <img src="images/school.jpg" alt="Classroom in Rampur" style="float: right;" />
-                    <br />
-                    <img src="images/ecuador_mini.jpg" alt="Working in Ecuador" style="float: right;" />
-                    <img src="images/outside.jpg" alt="School in Rampur" style="float: right;" />
-                    <br />
-                    <img src="images/watercarry.jpg" alt="Carrying Water in Ecuador" style="float: right" />
-                    <br />
-                    <img src="images/tejank_flowers.png" alt="Tejank Flowers" style="float: right" />
-                </p>
-                <div class="clear">
-                </div>
-            </div>
-
-            <div id="newsletters">
-                <h1>Newsletters</h1>
-                <ul>
-                    <li>
-                        <a href="newsletters/CMU_EWB_2015_05_Newsletter.pdf">May 2015 Newsletter</a>
-                    </li>
-                    <li>
-                        <a href="newsletters/CMU_EWB_2015_03_Newsletter.pdf">March 2015 Newsletter</a>
-                    </li>
-                    <li>
-                        <a href="newsletters/CMU_EWB_2015_01_Newsletter.pdf">January 2015 Newsletter</a>
-                    </li>
-                    <li>
-                        <a href="newsletters/CMU_EWB_2014_Fall_Newsletter.pdf">Fall 2014 Newsletter</a>
-                    </li>
-                    <li>
-                        <a href="newsletters/CMU_EWB_2013_Fall_Newsletter.pdf">Fall 2013 Newsletter</a>
-                    </li>
-                </ul>
             </div>
         </div>
         <footer>&copy;2015, Engineers Without Borders, Carnegie Mellon University Student Chapter</footer>
