--- a/New/donate.html
+++ b/New/donate.html
@@ -88,8 +88,8 @@
         </div>
         <div class="col-md-6">
           <h4>Sponsor Our Organization</h4>
-          <p>If you are interested in sponsoring our organization, please contact our Grants and Sponsorship Chair, Sidharth Verma.</p>
-          <p><a class="btn-sm btn-default" href="mailto:sidhartv@andrew.cmu.edu" role="button">Email &raquo;</a></p>
+          <p>If you are interested in sponsoring our organization, please contact our Grants and Sponsorship Chair, Sidharth Verma, at sidhartv AT andrew DOT cmu DOT edu</p>
+          
        </div>
         
       </div>
