Changed positions. Updated descriptions

--- a/New/projects.html
+++ b/New/projects.html
@@ -76,7 +76,7 @@
         <div class="container">
             <!-- Example row of columns -->
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h2>Energy In Zimbabwe</h2>
                     <p>Our chapter is currently working on a project to provide
                     clean, reliable electricity to the community of Niyadire,
@@ -84,7 +84,7 @@
                     <p><a class="btn btn-default" href="#zimbabwe" role=
                     "button">View details &raquo;</a></p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h2>PET Thatch</h2>
                     <p>This project aims to develop an automated process to
                     construct thatch roofs and other products from recycled
@@ -92,23 +92,16 @@
                     <p><a class="btn btn-default" href="#pet" role=
                     "button">View details &raquo;</a></p>
                 </div>
-                <div class="col-md-4">
-                    <h2>Tingo Pucará Development</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat interdum ligula, at pretium nunc vestibulum vel. Maecenas in euismod nulla, vel aliquam massa. Nullam placerat ipsum et pellentesque feugiat. </p>
-                    <p><a class="btn btn-default" href="#tingo" role=
-                    "button">View details &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <h2>Drones</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat interdum ligula, at pretium nunc vestibulum vel. Maecenas in euismod nulla, vel aliquam massa. Nullam placerat ipsum et pellentesque feugiat. </p>
+                    <p>This project aims to develop a system by which drones can assist farmers in collecting agricultural data and an accompanying data analysis platform.</p>
                     <p><a class="btn btn-default" href="#tingo" role=
                     "button">View details &raquo;</a></p>
                 </div>
-                <div class="col-md-4">
-                    <h2>Coffee</h2>
-                    <p>The Coffee Project aims to help coffee farmers in
-                    Ecuador make their growing and processing process more
-                    efficient, profitable, and environmentally friendly.</p>
+                <div class="col-md-6">
+                    <h2>Urban Agriculture</h2>
+                    <p>The Agriculture Project is focused on decreasing food deserts within the urban Pittsburgh area.  We work in both the Phipps Conservatory and the Environmental Engineering Laboratory to research indoor agriculture.  We utilize aeroponic and hydroponic growing techniques.  The project is broken into three main focuses: plants, power, construction.  This semester the team will research energy efficiency in the lab while working on the overall system at Phipps Conservatory.  All are invited to participate.
+                    </p>
                     <p><a class="btn btn-default" href="#tingo" role=
                     "button">View details &raquo;</a></p>
                 </div>
