--- a/about.html
+++ b/about.html
@@ -43,7 +43,43 @@
                             <strong>Current Board Members</strong>
                         </th>
                     </tr>
+
+                     <tr>
+                        <td style="text-align:right"> President</td>
+                        <td>Cindy Weng</td>
+                    </tr>
                     <tr>
+                        <td style="text-align:right"> Executive Vice President</td>
+                        <td>Roshan Sajjad</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right"> Vice President of Finance</td>
+                        <td>Sidharth Verma</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right"> Vice President of Projects</td>
+                        <td>Ike Kilinc</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right"> Vice President of Public Relations</td>
+                        <td>Tushita Gupta</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right"> Fundraising Chair</td>
+                        <td>Sherry Li</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right"> Grants and Sponsorships Chair</td>
+                        <td>Sidharth Verma</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right"> Secretary</td>
+                        <td>Adithya Venkatesan</td>
+                    </tr>
+
+
+
+<!--                    <tr>
                         <td style="text-align:right"> President</td>
                         <td>Sara Johnson</td>
                     </tr>
@@ -79,6 +115,8 @@
                         <td style="text-align:right"> Webmaster</td>
                         <td>Sidharth Verma</td>
                     </tr>
+
+-->
                 </div>
                 </body>
             </html>
