--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta content="" name="description">
     <meta content="" name="author">
     <link href="bootstrap/favicon.ico" rel="icon">
-    <title>Jumbotron Template for Bootstrap</title><!-- Bootstrap core CSS -->
+       <title>Carnegie Mellon University Engineers Without Borders</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
