--- a/news.html
+++ b/news.html
@@ -83,11 +83,12 @@
           <div class="col-md-4">
         <h2>Newsletter Archive</h2>  
           <p>Check out our newsletters. </p>
-            <p><a class="btn btn-default btn-small" href="#" role="button">May 2015</a></p>
-            <p><a class="btn btn-default" href="#" role="button">March 2015</a></p>
-            <p><a class="btn btn-default" href="#" role="button">January 2015</a></p>
-            <p><a class="btn btn-default" href="#" role="button">Fall 2014</a></p>
-            <p><a class="btn btn-default" href="#" role="button">Fall 2013</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2016_Fall_Newsletter.pdf" role="button">Fall 2016</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_05_Newsletter.pdf" role="button">May 2015</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_03_Newsletter.pdf" role="button">March 2015</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_01_Newsletter.pdf" role="button">January 2015</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2014_Fall_Newsletter.pdf" role="button">Fall 2014</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2013_Fall_Newsletter.pdf" role="button">Fall 2013</a></p>
        </div>
         
         </div>
